# slm_server

./: .gitignore  LICENSE  README.md  SECURITY.md  SETUP.md  nginx.conf.example  pyproject.toml  start.sh  stop.sh
config/: models.yaml.example
config/templates/: qwen3.6-unsloth.jinja
docs/: PORT_AND_ROUTING.md
src/slm_server/: __init__.py  __main__.py  benchmark_models.py  config.py  router.py  start_backends.py
tests/: test_benchmark_models.sh  test_router_embeddings.py  test_router_model_selection.py  test_router_rerank.py  test_start_backends_embeddings.py  test_start_backends_rerank.py
