[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-server"
version = "0.1.0"
description = "Unified LLM server with intelligent model-based routing. Optimized for Apple Silicon (M1/M2/M3) with MLX backend support."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Alex Afflerbach" }
]

dependencies = [
    "pydantic>=2.8.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "protobuf>=6.31.1",  # Fixes CVE-2025-4565. Note: JSON recursion depth bypass (GHSA-8qvm-5x2c-j2w7) affects <=6.33.4, no patch available yet
    "structlog>=24.0.0",
    "typer>=0.12.0",  # CLI framework for benchmark_models.py
    "rich>=13.0.0",  # Rich terminal output for benchmark_models.py
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

# Backend inference servers (install only what you need)
mlx = [
    "mlx-openai-server>=1.0.0",
]

llamacpp = [
    "llama-cpp-python[server]>=0.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
