[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-server"
version = "0.1.0"
description = "Unified LLM server with intelligent model-based routing. Optimized for Apple Silicon (M1/M2/M3) with MLX backend support."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Alex Afflerbach" }
]

dependencies = [
    "pydantic>=2.8.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "protobuf>=6.33.5",  # CVE-2025-4565 fixed in 6.31.1; CVE-2026-0994 (JSON recursion bypass) fixed in 6.33.5
    "structlog>=24.0.0",
    "typer>=0.12.0",  # CLI framework for benchmark_models.py
    "rich>=13.0.0",  # Rich terminal output for benchmark_models.py
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-PyYAML>=6.0.0",
]

# Backend inference servers (install only what you need)
mlx = [
    "mlx-openai-server>=1.7.1",
]

llamacpp = [
    "llama-cpp-python[server]>=0.2.0",
]

[tool.uv]
# MLX stack still pulls prerelease pins transitively in some versions
prerelease = "allow"
constraint-dependencies = [
    "requests>=2.33.0",   # GHSA-gc5v-m9x4-r6x2 (transitive via outlines / mlx stack)
    "aiohttp>=3.13.4",    # 10 CVEs in <=3.13.3: header injection, DoS, SSRF, cookie leaks (transitive)
    "pygments>=2.20.0",   # GHSA-hmwr-4x9x-jgrw ReDoS in GUID regex (transitive via rich)
    # diskcache<=5.6.3 has unsafe pickle deserialization (GHSA-7gh8-9274-8555); no upstream patch yet.
    # Risk is low for local-only deployments. Track: https://github.com/grantjenks/python-diskcache/issues
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
